fix body height on mobile devices

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   display: grid;
   place-content: center;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 article {
